--- a/config.sample
+++ b/config.sample
@@ -1,11 +1,11 @@
-# Sample configuration file for Polipo. -*-sh-*-
+# Sample configuration file for Polipo2. -*-sh-*-
 
 # You should not need to use a configuration file; all configuration
 # variables have reasonable defaults.  If you want to use one, you
-# can copy this to /etc/polipo/config or to ~/.polipo and modify.
+# can copy this to /etc/polipo2/config or to ~/.polipo2 and modify.
 
 # This file only contains some of the configuration variables; see the
-# list given by ``polipo -v'' and the manual for more.
+# list given by ``polipo2 -v'' and the manual for more.
 
 
 ### Basic configuration
@@ -17,7 +17,7 @@
 # proxyAddress = "::0"        # both IPv4 and IPv6
 # proxyAddress = "0.0.0.0"    # IPv4 only
 
-# Uncomment this if you want your Polipo to bind to a specific IP:
+# Uncomment this if you want your Polipo2 to bind to a specific IP:
 
 # proxyOutgoingAddress = "134.157.168.1"
 
@@ -27,12 +27,12 @@
 # allowedClients = 127.0.0.1, 134.157.168.57
 # allowedClients = 127.0.0.1, 134.157.168.0/24
 
-# Uncomment this if you want your Polipo to identify itself by
+# Uncomment this if you want your Polipo2 to identify itself by
 # something else than the host name:
 
-# proxyName = "polipo.example.org"
+# proxyName = "polipo2.example.org"
 
-# Uncomment this if there's only one user using this instance of Polipo:
+# Uncomment this if there's only one user using this instance of Polipo2:
 
 # cacheIsShared = false
 
@@ -53,7 +53,7 @@
 ### Memory
 ### ******
 
-# Uncomment this if you want Polipo to use a ridiculously small amount
+# Uncomment this if you want Polipo2 to use a ridiculously small amount
 # of memory (a hundred C-64 worth or so):
 
 # chunkHighMark = 819200
@@ -75,14 +75,14 @@
 # Uncomment this if you want to put the on-disk cache in a
 # non-standard location:
 
-# diskCacheRoot = "~/.polipo-cache/"
+# diskCacheRoot = "~/.polipo2-cache/"
 
 # Uncomment this if you want to disable the local web server:
 
 # localDocumentRoot = ""
 
-# Uncomment this if you want to enable the pages under /polipo/index?
-# and /polipo/servers?.  This is a serious privacy leak if your proxy
+# Uncomment this if you want to enable the pages under /polipo2/index?
+# and /polipo2/servers?.  This is a serious privacy leak if your proxy
 # is shared.
 
 # disableIndexing = false
@@ -97,13 +97,13 @@
 
 # dnsQueryIPv6 = no
 
-# Uncomment this if you want Polipo to prefer IPv4 to IPv6 for
+# Uncomment this if you want Polipo2 to prefer IPv4 to IPv6 for
 # double-stack hosts:
 
 # dnsQueryIPv6 = reluctantly
 
-# Uncomment this to disable Polipo's DNS resolver and use the system's
-# default resolver instead.  If you do that, Polipo will freeze during
+# Uncomment this to disable Polipo2's DNS resolver and use the system's
+# default resolver instead.  If you do that, Polipo2 will freeze during
 # every DNS query:
 
 # dnsUseGethostbyname = yes
